Closed
Bug 475532
Opened 16 years ago
Closed 16 years ago
ASSERTION: nsXPInstallManager not thread-safe: '_mOwningThread.GetThread() == PR_GetCurrentThread()', file /Users/dave/mozilla/source/trunk/mozilla/xpinstall/src/nsXPInstallManager.cpp
Categories
(Core Graveyard :: Installer: XPInstall Engine, defect)
Core Graveyard
Installer: XPInstall Engine
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9.2a1
People
(Reporter: mossop, Assigned: mossop)
References
Details
(Keywords: fixed1.9.0.11, fixed1.9.1)
Attachments
(1 file, 1 obsolete file)
1.05 KB,
patch
|
mossop
:
review+
mossop
:
superreview+
beltzner
:
approval1.9.1+
samuel.sidler+old
:
approval1.9.0.11+
|
Details | Diff | Splinter Review |
While it is never getting called on a non-main thread, the badcertlistener code is called through a proxy to the main thread, and creating that proxy requires the object to have threadsafe addref/release implementations.
Assignee | ||
Comment 1•16 years ago
|
||
Give it threadsafe implementations
Assignee: nobody → dtownsend
Status: NEW → ASSIGNED
Attachment #359046 -
Flags: superreview?
Attachment #359046 -
Flags: review?
Assignee | ||
Updated•16 years ago
|
Attachment #359046 -
Flags: superreview?(dveditz)
Attachment #359046 -
Flags: superreview?
Attachment #359046 -
Flags: review?(benjamin)
Attachment #359046 -
Flags: review?
Comment 2•16 years ago
|
||
Comment on attachment 359046 [details] [diff] [review]
patch rev 1
Please add an assertion to ~nsXPInstallManager that it is always being destroyed on the main thread (last release).
Attachment #359046 -
Flags: superreview?(dveditz)
Attachment #359046 -
Flags: superreview+
Attachment #359046 -
Flags: review?(benjamin)
Attachment #359046 -
Flags: review+
Assignee | ||
Comment 3•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Assignee | ||
Comment 4•16 years ago
|
||
I'd like to land this on the 1.9.1 branch. I don't expect it likely we'd see any problems fixed by this, though it certainly wouldn't hurt, but I would like to land bug 474763 on the branch
Attachment #359046 -
Attachment is obsolete: true
Attachment #361519 -
Flags: superreview+
Attachment #361519 -
Flags: review+
Attachment #361519 -
Flags: approval1.9.1?
Comment 5•16 years ago
|
||
Comment on attachment 361519 [details] [diff] [review]
patch checked in
a191=beltzner
Attachment #361519 -
Flags: approval1.9.1? → approval1.9.1+
Assignee | ||
Comment 6•16 years ago
|
||
Landed on branch http://hg.mozilla.org/releases/mozilla-1.9.1/rev/f1deb194fcbb
Keywords: fixed1.9.1
Comment 7•16 years ago
|
||
Comment on attachment 361519 [details] [diff] [review]
patch checked in
Approving both of these for 1.9.0.10. a=ss for release-drivers.
Attachment #361519 -
Flags: approval1.9.0.10+
Assignee | ||
Comment 8•16 years ago
|
||
Landed on 1.9.0.x branch:
Checking in xpinstall/src/nsXPInstallManager.cpp;
/cvsroot/mozilla/xpinstall/src/nsXPInstallManager.cpp,v <-- nsXPInstallManager.cpp
new revision: 1.168; previous revision: 1.167
done
Keywords: fixed1.9.0.10
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•