Bug 475532: nsXPInstallManager needs threadsafe addref/release. r+sr=bsmedberg